--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes!</h1>
-    <img src="" alt="">
+    <img src="media/anime-making-food.gif" alt="delicious anime food">
     <h2>Please follow the links below to find the recipes: </h2>
     <ul>
         <li><a href="">Cheesecake</a></li>
