Added changes to the upma page

--- a/recipes_actual/rava_upma.html
+++ b/recipes_actual/rava_upma.html
@@ -101,5 +101,7 @@
       <li>After 2 to 4 minutes, open and stir the upma rava</li>
       <li>Lastly add the ghee at this stage. This is optional. Switch off and keep the pan covered for about 5 minutes.</li>
     </ol>
+
+    <h3>Your Rava Upma is now Ready!!</h3>
   </body>
 </html>
