--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
     <title>Recipes</title>
-</head>
-<body>
-    <h1>Odin Recipes!</h1>
-    <img src="media/anime-making-food.gif" alt="delicious anime food">
-    <h2>Please follow the links below to find the recipes: </h2>
-    <ul>
-        <li><a href="recipes_actual/chocolate_mousse.html">1 Ingredient Chocolate Mousse</a></li>
-        <li><a href="recipes_actual/goan_fish_curry.html">Goan Fish Curry</a></li>
+  </head>
+  <body>
+    <header>Odin Recipes!</header>
+    <div class="image">
+      <img src="media/anime-making-food.gif" alt="delicious anime food" />
+    </div>
+    <div class="recipes">
+      <h2>Recipes:</h2>
+      <ul>
+        <li>
+          <a href="recipes_actual/chocolate_mousse.html"
+            >1 Ingredient Chocolate Mousse</a
+          >
+        </li>
+        <li>
+          <a href="recipes_actual/goan_fish_curry.html">Goan Fish Curry</a>
+        </li>
         <li><a href="recipes_actual/rava_upma.html">Rava Upma</a></li>
-    </ul>
-</body>
+      </ul>
+    </div>
+  </body>
 </html>
