Changed font size

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>Odin Recipes!</header>
     <div class="image">
-      <img src="media/anime-making-food.gif" alt="delicious anime food" />
+      <img src="media/anime-making-food.gif" alt="delicious anime food" width="400px" />
     </div>
     <div class="recipes">
       <h2>Recipes:</h2>
